--- a/css/styles.css
+++ b/css/styles.css
@@ -513,3 +513,14 @@ max-width: 280px;
         height: 40px;
     }
     .footer-logo-paragraph{margin-right: 120px;}
+
+    /* -----------BACKDROP--------------------------- */
+
+    .backdrop{
+        width: 100%;
+        height: 100%;
+        background-color: rgba(46, 47, 66, 0.4);
+        position: fixed;
+        top: 0;
+        
+    }
