--- a/css/styles.css
+++ b/css/styles.css
@@ -522,5 +522,80 @@ max-width: 280px;
         background-color: rgba(46, 47, 66, 0.4);
         position: fixed;
         top: 0;
+       
+
+    }
+    .modal{
+        width: 408px;
+        min-height: 584px;
+        background-color: #fcfcfc;
+        border-radius: 4px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        padding: 24px;
+    }
+    .modal-buttom{
+        position: absolute;
+        top:24px;
+        right: 24px;
+        width: 24px;
+        height: 24px;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        fill: #2e2f42;
+        background-color: #e7e9fc;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        padding: 0;
+        cursor: pointer;
+        transition: background-color 250ms 
+        cubic-bezier(0.4, 0, 0.2, 1),
+        border 250ms cubic-bezier(0.4, 0, 0.2, 1);
         
+    }
+    .icon-close{
+        fill: #2e2f42;
+        width: 8px;
+        height: 8px;
+        padding: 8px;
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background-color: rgba(0, 0, 0, 0.1);
+    }
+
+    .modal-buttom :hover,
+    .modal-buttom :focus
+     {color: #404BBF;
+        border: none;
+    }
+
+    .modal-title{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+    margin-bottom: 15px;
+    }
+    .modal-input{
+        width: 100%;
+        border: 1px solid #4d5ae5;
+    border-radius: 4px;
+    width: 360px;
+    height: 40px;
+    margin-bottom: 8px;
+    background-color: transparent;
+    
+    }
+    .modal-icons{
+        position: absolute;
+        left: 38px;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+    .modal-input-wrap{
+        position: relative;
     }
