--- a/css/styles.css
+++ b/css/styles.css
@@ -515,16 +515,24 @@ max-width: 280px;
     .footer-logo-paragraph{margin-right: 120px;}
 
     /* -----------BACKDROP--------------------------- */
-
+    
     .backdrop{
         width: 100%;
         height: 100%;
         background-color: rgba(46, 47, 66, 0.4);
         position: fixed;
         top: 0;
-       
-
+        box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
+         0 2px 1px 0 rgba(0, 0, 0, 0.2);
+         opacity: 0;
+         pointer-events: none;
+         visibility: hidden;
     }
+    /* .backdrop.is-open{
+        opacity: 1;
+        pointer-events: auto;
+        visibility: visible;
+    } */
     .modal{
         width: 408px;
         min-height: 584px;
@@ -537,38 +545,30 @@ max-width: 280px;
         padding: 24px;
     }
     .modal-buttom{
-        position: absolute;
-        top:24px;
-        right: 24px;
-        width: 24px;
-        height: 24px;
-        border-radius: 50%;
         display: flex;
         align-items: center;
         justify-content: center;
-        fill: #2e2f42;
-        background-color: #e7e9fc;
-        border: 1px solid rgba(0, 0, 0, 0.1);
+        position: absolute;
         padding: 0;
-        cursor: pointer;
+        width: 24px;
+        height: 24px;
+        top: 24px;
+        right: 24px;
+        background-color: #E7E9FC;
+        border-radius: 50%;
+        border: 1px solid rgba(0, 0, 0, 0.1);
         transition: background-color 250ms 
-        cubic-bezier(0.4, 0, 0.2, 1),
-        border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        
+        cubic-bezier(0.4, 0, 0.2, 1), 
+        border 250ms 
+        cubic-bezier(0.4, 0, 0.2, 1);
     }
-    .icon-close{
-        fill: #2e2f42;
-        width: 8px;
-        height: 8px;
-        padding: 8px;
-        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    background-color: rgba(0, 0, 0, 0.1);
-    }
-
-    .modal-buttom :hover,
-    .modal-buttom :focus
+.icon-close{
+    fill: #2E2F42;
+    transition: fill 250ms 
+    cubic-bezier(0.4, 0, 0.2, 1);
+}
+    .modal-buttom :hover
      {color: #404BBF;
-        border: none;
     }
 
     .modal-title{
@@ -579,23 +579,190 @@ max-width: 280px;
     text-align: center;
     color: #2e2f42;
     margin-bottom: 15px;
+    padding-top: 72px;
     }
     .modal-input{
-        width: 100%;
-        border: 1px solid #4d5ae5;
-    border-radius: 4px;
-    width: 360px;
-    height: 40px;
-    margin-bottom: 8px;
-    background-color: transparent;
+        border: 1px solid rgba(46, 47, 66, 0.4);
+        border-radius: 4px;
+        background-color: transparent;
+        min-width: 100%;
+        height: 40px;
+        padding-top: 8px;
+        padding-left: 38px;
+        transition: border-color 250ms 
+        cubic-bezier(0.4, 0, 0.2, 1);
+        outline: transparent;}
     
+    .modal-info{
+        display: block;
+        font-size: 12px;
+        line-height: 1.17;
+        letter-spacing: 0.04em;
+        color: #8e8f99;
+        margin-top: 8px;
+        margin-bottom: 4px;
     }
+
     .modal-icons{
         position: absolute;
-        left: 38px;
+        left: 16px;
         top: 50%;
+        fill: #2e2f42;
         transform: translateY(-50%);
+        transition: fill 250ms 
+        cubic-bezier(0.4, 0, 0.2, 1);
     }
     .modal-input-wrap{
         position: relative;
     }
+    /* .modal-info{cursor: default;} */
+    .textarea {
+        display: block;
+        resize: none;
+        min-height: 120px;
+        padding: 8px 16px;
+        font-size: 12px;
+        line-height: 1.17;
+        letter-spacing: 0.04em;
+        color: rgba(46, 47, 66, 0.4);
+        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .input-text {
+        border: 1px solid rgba(46, 47, 66, 0.4);
+        border-radius: 4px;
+        background-color: transparent;
+        min-width: 100%;
+        height: 40px;
+        padding-left: 38px;
+        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        outline: transparent;
+    }
+    .checkbox {
+        margin-bottom: 24px;
+    }
+    .visually-hidden {
+        position: absolute;
+        width: 1px;
+        height: 1px;
+        margin: -1px;
+        border: 0;
+        padding: 0;
+        white-space: nowrap;
+        clip-path: inset(100%);
+        clip: rect(0 0 0 0);
+        overflow: hidden;
+    }
+    .privacy-text {
+        font-size: 12px;
+        line-height: 1.17;
+        letter-spacing: 0.04em;
+        color: #8e8f99;
+    }
+    .agree-svg {
+        width: 16px;
+        height: 16px;
+        border-radius: 2px;
+        border: 1px solid rgba(46, 47, 66, 0.4);
+        background-color: transparent;
+        margin-right: 8px;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        fill: transparent;
+        transition: background-color 250ms 
+        cubic-bezier(0.4, 0, 0.2, 1), 
+        border 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+        fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .privacy-agree-text {
+        text-decoration: underline;
+        color: #4d5ae5;
+    }
+    .privacy-checkbox:checked + .privacy-text .agree-svg {
+        fill: #f4f4fd;
+        border: none;
+        background-color: #404BBF;
+    }
+
+    .btn-text {
+        font-family: inherit;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        color: #fff;
+    }
+    .btn {
+        display: block;
+        margin-top: 48px;
+        margin-bottom: 0;
+        margin-right: auto;
+        margin-left: auto;
+        border-radius: 4px;
+        box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+        background: #4d5ae5;
+        padding: 16px 32px;
+        min-width: 169px;
+        border: none;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    /* --------------FOOTER INPUT--------------- */
+
+    .footer-input{
+        font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
+    }
+    /* .email-send{
+    border: 1px solid #fff;
+    border-radius: 4px;
+    width: 264px;
+    height: 40px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    } */
+    .footer-send-email{
+        margin-left: 80px;
+    }
+    .subscribe-button{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 16px;
+        border-radius: 4px;
+        width: 165px;
+        height: 40px;
+        background-color: #4d5ae5;
+        outline: transparent;
+        border: none;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        text-align: center;
+        color: #fff;
+    }
+.email{
+    font-weight: 400;
+font-size: 12px;
+line-height: 2;
+letter-spacing: 0.04em;
+color: #FFFFFF;
+box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+border: 1px solid #fff;
+border-radius: 4px;
+width: 264px;
+height: 40px;
+background-color: #2e2f42;
+}
+.footer-input{
+margin-bottom: 16px;
+}
+.footer-send{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 24px;
+}
