--- a/css/styles.css
+++ b/css/styles.css
@@ -527,11 +527,13 @@ max-width: 280px;
          opacity: 0;
          pointer-events: none;
          visibility: hidden;
+         transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+         visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
-    /* .backdrop.is-open{
+    .backdrop.is-open{
         opacity: 1;
         pointer-events: auto;
-        visibility: visible; */
+        visibility: visible;
     }
     .modal{
         width: 408px;
@@ -542,7 +544,9 @@ max-width: 280px;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        padding: 24px;
+        padding: 72px 24px 24px 24px;
+        transition: transform 250ms 
+        cubic-bezier(0.4, 0, 0.2, 1);
     }
     .modal-buttom{
         display: flex;
@@ -557,18 +561,21 @@ max-width: 280px;
         background-color: #E7E9FC;
         border-radius: 50%;
         border: 1px solid rgba(0, 0, 0, 0.1);
-        transition: background-color 250ms 
-        cubic-bezier(0.4, 0, 0.2, 1), 
-        border 250ms 
-        cubic-bezier(0.4, 0, 0.2, 1);
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+        border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        cursor: pointer;
     }
 .icon-close{
     fill: #2E2F42;
     transition: fill 250ms 
     cubic-bezier(0.4, 0, 0.2, 1);
 }
-    .modal-buttom :hover
+.icon-close :hover, :focus{
+    fill: #ffffff;
+}
+    .modal-buttom :hover, :focus
      {color: #404BBF;
+        border: none;
     }
 
     .modal-title{
@@ -579,7 +586,10 @@ max-width: 280px;
     text-align: center;
     color: #2e2f42;
     margin-bottom: 15px;
-    padding-top: 72px;
+    }
+    .modal-field{
+        margin-bottom: 8px;
+
     }
     .modal-input{
         border: 1px solid rgba(46, 47, 66, 0.4);
@@ -592,7 +602,9 @@ max-width: 280px;
         transition: border-color 250ms 
         cubic-bezier(0.4, 0, 0.2, 1);
         outline: transparent;}
-    
+    .modal-input :focus{
+        border-color: #4D5AE5;
+    }
     .modal-info{
         display: block;
         font-size: 12px;
@@ -612,30 +624,34 @@ max-width: 280px;
         transition: fill 250ms 
         cubic-bezier(0.4, 0, 0.2, 1);
     }
+    .modal-icons :focus{
+        fill: #4D5AE5;
+    }
     .modal-input-wrap{
         position: relative;
     }
-    /* .modal-info{cursor: default;} */
-    .textarea {
+    .textarea-field{
+        margin-bottom: 16px;
+    }
+    .textarea-input-text {
+        width: 100%;
         display: block;
         resize: none;
-        min-height: 120px;
+        height: 120px;
         padding: 8px 16px;
         font-size: 12px;
         line-height: 1.17;
         letter-spacing: 0.04em;
         color: rgba(46, 47, 66, 0.4);
-        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
-    .input-text {
         border: 1px solid rgba(46, 47, 66, 0.4);
         border-radius: 4px;
         background-color: transparent;
-        min-width: 100%;
-        height: 40px;
-        padding-left: 38px;
-        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        padding: 8px 16px;
         outline: transparent;
+        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .textarea-input-text :focus{
+        border-color: #4D5AE5;
     }
     .checkbox {
         margin-bottom: 24px;
@@ -731,9 +747,9 @@ max-width: 280px;
         margin-left: 80px;
     }
     .subscribe-button{
-        /* display: flex;
+        display: flex;
         justify-content: center;
-        align-items: center; */
+        align-items: center;
         gap: 16px;
         border-radius: 4px;
         min-width: 165px;
@@ -761,7 +777,7 @@ border: 1px solid #fff;
 border-radius: 4px;
 width: 264px;
 height: 40px;
-background-color: #2e2f42;
+background-color: transparent;
 padding-left: 16px;
 }
 .footer-input{
