--- a/css/styles.css
+++ b/css/styles.css
@@ -547,6 +547,8 @@ max-width: 280px;
         padding: 72px 24px 24px 24px;
         transition: transform 250ms 
         cubic-bezier(0.4, 0, 0.2, 1);
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 
+        0px 2px 1px rgba(0, 0, 0, 0.2);
     }
     .modal-buttom{
         display: flex;
@@ -570,10 +572,17 @@ max-width: 280px;
     transition: fill 250ms 
     cubic-bezier(0.4, 0, 0.2, 1);
 }
-.icon-close :hover, :focus{
+.icon-close :hover{
     fill: #ffffff;
 }
-    .modal-buttom :hover, :focus
+.icon-close :focus{
+    fill: #ffffff;
+}
+    .modal-buttom:hover
+     {color: #404BBF;
+        border: none;
+    }
+    .modal-buttom:focus
      {color: #404BBF;
         border: none;
     }
@@ -585,7 +594,7 @@ max-width: 280px;
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
-    margin-bottom: 15px;
+    margin-bottom: 16px;
     }
     .modal-field{
         margin-bottom: 8px;
@@ -601,8 +610,11 @@ max-width: 280px;
         padding-left: 38px;
         transition: border-color 250ms 
         cubic-bezier(0.4, 0, 0.2, 1);
-        outline: transparent;}
-    .modal-input :focus{
+        outline: transparent;
+        fill: #4D5AE5;
+    }
+
+    .modal-input:focus{
         border-color: #4D5AE5;
     }
     .modal-info{
