--- a/css/styles.css
+++ b/css/styles.css
@@ -572,10 +572,10 @@ max-width: 280px;
     transition: fill 250ms 
     cubic-bezier(0.4, 0, 0.2, 1);
 }
-.icon-close:hover{
+.icon-close:hover {
     fill: #ffffff;
 }
-.icon-close:focus{
+.icon-close:focus + svg {
     fill: #ffffff;
 }
     .modal-buttom:hover
@@ -617,6 +617,10 @@ max-width: 280px;
     .modal-input:focus{
         border-color: #4D5AE5;
     }
+    .modal-input:focus + svg {
+        fill: #4D5AE5;
+        }
+
     .modal-info{
         display: block;
         font-size: 12px;
