--- a/css/styles.css
+++ b/css/styles.css
@@ -572,10 +572,10 @@ max-width: 280px;
     transition: fill 250ms 
     cubic-bezier(0.4, 0, 0.2, 1);
 }
-.icon-close:hover {
+.icon-close:hover > svg{
     fill: #ffffff;
 }
-.icon-close:focus + svg {
+.icon-close:focus > svg{
     fill: #ffffff;
 }
     .modal-buttom:hover
