--- a/css/styles.css
+++ b/css/styles.css
@@ -567,16 +567,23 @@ max-width: 280px;
         border 250ms cubic-bezier(0.4, 0, 0.2, 1);
         cursor: pointer;
     }
-.icon-close{
+/* .icon-close{
     fill: #2E2F42;
     transition: fill 250ms 
     cubic-bezier(0.4, 0, 0.2, 1);
+} */
+.icon-close {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.icon-close:hover > svg{
+/* .icon-close:hover{
+    fill: #ffffff;
+} */
+.modal-buttom:hover, .modal-buttom:focus {
     fill: #ffffff;
 }
-.icon-close:focus > svg{
-    fill: #ffffff;
 }
     .modal-buttom:hover
      {background-color: #404BBF;
